2010-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* conf/common.rmk (font/font.c_DEPENDENCIES): Condition on FONT_SOURCE.

2010-01-20  Robert Millan  <rmh.grub@aybabtu.com>

	* util/misc.c (make_system_path_relative_to_its_root): Work around
	special-casing of "/", as previous incarnation of this routine did.

2010-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix any-emu compilation.

	* conf/any-emu.rmk (bin_UTILITIES): Add grub-bin2h.
	* grub_bin2h_SOURCES: New variable.

2010-01-20  Robert Millan  <rmh.grub@aybabtu.com>

	* util/grub.d/00_header.in: Fix stupid mistake from last commit.

2010-01-20  Robert Millan  <rmh.grub@aybabtu.com>

	* util/grub.d/00_header.in: Fix handling of locale_dir.

2010-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Add /usr/share/fonts/unifont/unifont.pcf.gz
	as possible unifont location (Gentoo).
	Reported by: Alexander Brüning

2010-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	Don't try to generate lists for kernel.img.

	* conf/i386-efi.rmk (pkglib_PROGRAMS): New variable.
	(pkglib_MODULES): Remove kernel.img.
	(kernel_img_EXPORTS): Removed.
	(kernel_img_RELOCATABLE): New variable.
	* conf/x86_64-efi.rmk: Likewise.
	* genmk.rb: Remove *_EXPORTS support and add *_RELOCATABLE support.

2010-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/misc.h (grub_sprintf): Removed. All users switched to
	grub_xasprintf or grub_snprintf.
	(grub_vsprintf): Likewise.
	(grub_snprintf): New proto.
	(grub_vsnprintf): Likewise.
	(grub_xasprintf): Likewise.
	(grub_xvasprintf): Likewise.
	* kern/misc.c (grub_vprintf): Use grub_vsnprintf_real.
	(grub_sprintf): Removed.
	(grub_vsnprintf): New function.
	(grub_snprintf): Likewise.
	(grub_xvasprintf): Likewise.
	(grub_xasprintf): Likewise.
	(grub_vsprintf): Renamed to ...
	(grub_vsnprintf_real): ...this. New argument max_len.

2010-01-20  BVK Chaitanya  <bvk.groups@gmail.com>

	* include/grub/script_sh.h (sourcecode): Remove const qualifier to